<resources>
    <string name="app_name">Dev_task_advanced</string>
    <string name="title_home">Home</string>
    <string name="title_place">Place</string>
    <string name="title_services">Services</string>
    <string name="title_my_records">My Records</string>
    <string name="title_settings">Settings</string>
    <string name="title_app_settings">App settings</string>
    <string name="title_language">Language</string>
    <string name="title_language_selected">English</string>
    <string name="title_pin_code">PIN code</string>
    <string name="title_pin_code_selected">Disable</string>
    <string name="title_button">Authorize</string>
    <string name="title_toolbar_place">Select city</string>
    <string name="open_map">Open map</string>
    <string name="title_toolbar_main">Toolbar</string>
    <string name="back">back</string>
    <string name="submit">Submit</string>
    <string name="_1_place">1.place</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="error401">Incorrect login or password</string>
    <string name="error404">Problems with connections!</string>
    <string name="vailidation">Pls enter something</string>
</resources>