<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_place"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_place" />

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_services" />

    <item
        android:id="@+id/navigation_my_records"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_my_records"
        />

</menu>