<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dev_task_advanced.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action android:id="@+id/one"
            app:destination="@+id/navigation_place"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_place"
        android:name="com.example.dev_task_advanced.ui.place.PlaceFragment"
        android:label="@string/title_place"
        tools:layout="@layout/fragment_place" >
        <action android:id="@+id/action_b_to_a"
        app:destination="@id/navigation_home"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@+id/a"
        app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_services"
        android:name="com.example.dev_task_advanced.ui.services.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/navigation_my_records"
        android:name="com.example.dev_task_advanced.ui.myRecords.MyRecordsFragment"
        android:label="@string/title_my_records"
        tools:layout="@layout/fragment_my_records" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.dev_task_advanced.ui.settings.fragment_settings"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings"
        />
</navigation>
