<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.fragment_settings">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_fragment" />

    <TextView
        android:id="@+id/app_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_app_settings"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <LinearLayout
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/container"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/app_settings">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="6dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/title_language"/>
        <TextView
            android:id="@+id/select_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:text="@string/title_language_selected"
            android:textColor="@color/black"
            android:gravity="center"
            app:drawableLeftCompat="@drawable/flag" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/container"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/language">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="6dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/title_pin_code"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:text="@string/title_pin_code_selected"
            android:textColor="@color/black"
            android:gravity="center"
            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_button"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/pin_code"
        android:background="@drawable/custom_button_settings"
        />

</androidx.constraintlayout.widget.ConstraintLayout>