<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/nav_btn_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#DADADA"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/nav_icon_home"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_home_black_24dp" />

            <TextView
                android:id="@+id/nav_text_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/title_home"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_btn_place"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/nav_icon_place"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:src="@drawable/place" />

            <TextView
                android:id="@+id/nav_text_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/title_place"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_btn_services"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/nav_icon_services"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:src="@drawable/box_glove" />

            <TextView
                android:id="@+id/nav_text_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/title_services"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_btn_records"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/nav_icon_records"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_small_arrow" />

            <TextView
                android:id="@+id/nav_text_records"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/title_my_records"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_btn_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/nav_icon_settings"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:src="@drawable/setting" />

            <TextView
                android:id="@+id/nav_text_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/title_settings"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>